# market_curly

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: pr.yaml  sonarcloud-analyze.yml
src/: __init__.py  config.py  database.py  elastic_client.py  main.py  redis_client.py
src/apis/: dependencies.py
src/apis/common/: __init__.py  health.py
src/apis/posts/: __init__.py  create_post.py  get_post.py  get_posts.py
src/apis/store/: __init__.py  cart.py  goods.py  order.py  product.py
src/apis/user/: __init__.py  user.py
src/models/: order.py  post.py  product.py  repository.py  user.py
src/schema/: request.py  response.py
src/service/: auth.py  background_task.py  cart.py  inventory.py  order.py  session.py  sync.py  user.py
tests/: .env.test  __init__.py
tests/apis/: conftest.py
tests/apis/common/: test_health.py
tests/apis/posts/: test_create_post.py  test_get_post.py  test_get_posts.py
tests/apis/store/: test_goods.py  test_product.py
tests/apis/user/: test_user.py
